updated navigation bar

--- a/InstitutionAdmin/IA_editProgramsInYourInstitute.htm
+++ b/InstitutionAdmin/IA_editProgramsInYourInstitute.htm
@@ -11,63 +11,63 @@
 	<!-- Beginning of the new navigation bar html code -->
 <!-- Testing, Testing: 1,2,3 -->
 <div id="DDNavBar">
-<h2 align=center>Instituttion Admin</h2>
-   <ul>
-       <li></li>
- <li><a href="index.htm">Home</a></li>
- 
- <li class="dropdown" style="float:right">
-   <a href="javascript:void(0)" class="dropbtn">Institute Admin Profile</a>
-   <div class="dropdown-content">
-     <a href="#">View Profile</a>
-     <a href="#">Logout</a>
-   </div>
- </li>
- 
- <li class="dropdown">
-   <a href="javascript:void(0)" class="dropbtn">Users</a>
-   <div class="dropdown-content">
-     <a href="viewUsers.htm">View Users</a>
-     <a href="addUsers.htm">Add Users</a>
-   </div>
- </li>
- 
- <li class="dropdown">
-   <a href="javascript:void(0)" class="dropbtn">Institutions</a>
-   <div class="dropdown-content">
-     <a href="viewInstitutions.htm">View Institutions</a>
-     <a href="addInstitution.htm">Add Institutions</a>
-   </div>
- </li>
- 
- <li class="dropdown">
-   <a href="javascript:void(0)" class="dropbtn">Programs</a>
-   <div class="dropdown-content">
-     <a href="viewPrograms.htm">View Programs</a>
-     <a href="addPrograms.htm">Add Programs</a>
-   </div>
- </li>
+<h2 align=center>Institution Admin</h2>
+    <ul>
+        <li></li>
+  <li><a href="IA_Index.htm">Home</a></li>
+  
+  <li class="dropdown" style="float:right">
+    <a href="javascript:void(0)" class="dropbtn">Institution Admin Profile</a>
+    <div class="dropdown-content">
+      <a href="#">View User Profile</a>
+      <a href="IA_InstituteProfile.htm">View Institution Profile</a>
+      <a href="#">Logout</a>
+    </div>
+  </li>
+  
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Users</a>
+    <div class="dropdown-content">
+      <a href="IA_viewUsers.htm">View All Users</a>
+      <a href="IA_addInstitutionUsers.htm">Add Institution Users</a>
+    </div>
+  </li>
+  
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Institutions</a>
+    <div class="dropdown-content">
+      <a href="IA_viewInstitutions.htm">View All Institutions</a>
+      <a href="IA_editInstitutions.htm">Edit Your Institution</a>
+    </div>
+  </li>
+  
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Programs</a>
+    <div class="dropdown-content">
+      <a href="IA_viewPrograms.htm">View All Programs</a>
+      <a href="IA_editProgramsInYourInstitute.htm">Edit Your Programs</a>
+    </div>
+  </li>
 
 <li class="dropdown">
-   <a href="javascript:void(0)" class="dropbtn">Courses</a>
-   <div class="dropdown-content">
-     <a href="viewCourse.htm">View Courses</a>
-     <a href="addCourse.htm">Add Courses</a>
-   </div>
- </li>
- 
- <li class="dropdown">
-   <a href="javascript:void(0)" class="dropbtn">Agreements</a>
-   <div class="dropdown-content">
-     <a href="#">View Agreements</a>
-     <a href="#">Add Agreements</a>
-   </div>
- </li>
- 
- </ul>
-   </div><!-- End div id=DDNavBar -->
-<!-- End of new nav bar html code -->
-
+    <a href="javascript:void(0)" class="dropbtn">Courses</a>
+    <div class="dropdown-content">
+      <a href="IA_viewCourse.htm">View All Courses</a>
+      <a href="IA_addCourse.htm">Add A Course To Your Program</a>
+    </div>
+  </li>
+  
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Agreements</a>
+    <div class="dropdown-content">
+      <a href="#">View Agreements</a>
+      <a href="#">Add Agreements</a>
+    </div>
+  </li>
+  
+  </ul>
+    </div><!-- End div id=DDNavBar -->
+    
 <div class="selectProgramContainer_ViewProgram">
 		<div class="viewUserHeader">
 			<h4>Edit Program In Your Institute</h4>
