Working on Agreements Pages

--- a/addInstitution.htm
+++ b/addInstitution.htm
@@ -61,7 +61,7 @@
     <a href="javascript:void(0)" class="dropbtn">Agreements</a>
     <div class="dropdown-content">
       <a href="#">View Agreements</a>
-      <a href="#">Add Agreements</a>
+      <a href="#">Create Agreement</a>
     </div>
   </li>
   
