--- a/index.htm
+++ b/index.htm
@@ -57,18 +57,13 @@
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Agreements</a>
     <div class="dropdown-content">
-      <a href="#">View Agreements</a>
-      <a href="#">Add Agreements</a>
+      <a href="viewAgreementsIndex.htm">View Transfer Agreements</a>
+      <a href="createAgreement.htm">Create Transfer Agreements</a>
     </div>
   </li>
   
   </ul>
     </div><!-- End div id=DDNavBar -->
-    
-    <div id="About">
-        <h4>About this tool</h4>
-    </div> <!-- End div id="About" -->
-	
 </div><!--End of div Container-->
 </body>
 </html>
