--- a/viewCourse.htm
+++ b/viewCourse.htm
@@ -60,8 +60,8 @@
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Agreements</a>
     <div class="dropdown-content">
-      <a href="#">View Agreements</a>
-      <a href="#">Add Agreements</a>
+      <a href="viewAgreementsIndex.htm">View Transfer Agreements</a>
+      <a href="createAgreement.htm">Create Transfer Agreements</a>
     </div>
   </li>
   
