--- a/selectedInstitution.htm
+++ b/selectedInstitution.htm
@@ -10,7 +10,7 @@
 <body>
 <div class="container">
 
-    <!-- Testing, Testing: 1,2,3 -->
+<!-- Testing, Testing: 1,2,3 -->
 <div id="DDNavBar">
 <h2 align=center>Global Admin</h2>
     <ul>
@@ -60,13 +60,14 @@
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Agreements</a>
     <div class="dropdown-content">
-      <a href="#">View Agreements</a>
-      <a href="#">Add Agreements</a>
+      <a href="viewAgreementsIndex.htm">View Transfer Agreements</a>
+      <a href="createAgreement.htm">Create Transfer Agreements</a>
     </div>
   </li>
   
   </ul>
     </div><!-- End div id=DDNavBar -->
+
 
  
     
