--- a/viewInstitutions.htm
+++ b/viewInstitutions.htm
@@ -8,7 +8,7 @@
 <div class="container">
 
     <!-- Testing, Testing: 1,2,3 -->
-<div id="DDNavBar"><!-- Dropdown Navigation bar -->
+<div id="DDNavBar">
 <h2 align=center>Global Admin</h2>
     <ul>
         <li></li>
@@ -57,8 +57,8 @@
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Agreements</a>
     <div class="dropdown-content">
-      <a href="#">View Agreements</a>
-      <a href="#">Add Agreements</a>
+      <a href="viewAgreementsIndex.htm">View Transfer Agreements</a>
+      <a href="createAgreement.htm">Create Transfer Agreements</a>
     </div>
   </li>
   
