--- a/addUsers.htm
+++ b/addUsers.htm
@@ -103,15 +103,14 @@
 			<fieldset>
 				<legend > Institute</legend>
 				<input type="text" name="instituteId" placeholder="Institute ID" class="commonTxtBox2CSS">
-                
-				<p>OR</p>
+                <p>OR</p>
 				<select id="selectInstituteDropDownInAddUser" class="commonCmbBox3CSS">
-				<option></option>
+				    <option disabled selected> Select an Institution</option>
 					<option></option>
 					<option></option>
 					<option></option>
-				</select>
-			</fieldset>
+				</select><br>
+			</fieldset><br>
 			<fieldset>
             <legend>Admin Type:</legend>
 			<input type="radio" name="group1" value="MVCC Admin" id="mvccAdmin"> MVCC Admin
