--- a/viewPrograms_selectProgram.htm
+++ b/viewPrograms_selectProgram.htm
@@ -104,7 +104,7 @@
                         <select id="addNumOfCreditsInSelectProgramName"  class="commonCmbBoxCSS">
                             <option>1</option>
                             <option>2</option>
-                            <option>3</option>
+                            <option selected>3</option>
                             <option>4</option>
                             <option>5</option>
                             <option>6</option>
@@ -197,7 +197,7 @@
             
             <textarea class="textarea1InSelectProgram" placeholder="Course Details"></textarea>
              <form action="" id="frmAddCourseInSelectProgram" >
-				<input type="button" value="Add Course" id="addCourseInGenEdReq" class="commonBtnInMappingPrograms">
+				<input type="button" value="Add Course" id="addCourseInGenEdReq" class="commonBtnInCareerCourses">
 			</form>
              <form action="" id="frmRemoveCourseInSelectProgram" >
 				<input type="button" value="Remove Course"  class="commonBtnInCareerCourses">
