--- a/addPrograms.htm
+++ b/addPrograms.htm
@@ -100,7 +100,7 @@
                         <select id="addNumOfCreditsInAddProgramName"  class="commonCmbBoxCSS">
                             <option>1</option>
                             <option>2</option>
-                            <option>3</option>
+                            <option selected>3</option>
                             <option>4</option>
                             <option>5</option>
                             <option>6</option>
