Updated Nav Bar, Created Remove Institution Page

--- a/addCourse.htm
+++ b/addCourse.htm
@@ -64,12 +64,13 @@
     <div class="dropdown-content">
       <a href="viewAgreementsIndex.htm">View Transfer Agreements</a>
       <a href="createAgreement.htm">Create Transfer Agreements</a>
+        <a href="removeAgreement.htm">Remove Transfer Agreements</a>
     </div>
   </li>
   
   </ul>
     </div><!-- End div id=DDNavBar -->
-  
+
 
 	<div class="addCourseContainer" align=center>
 		<div class="addCourseHeader">
