--- a/addInstitution.htm
+++ b/addInstitution.htm
@@ -10,7 +10,7 @@
 <body>
 <div class="container">
 
-<!-- Testing, Testing: 1,2,3 -->
+    <!-- Testing, Testing: 1,2,3 -->
 <div id="DDNavBar">
 <h2 align=center>Global Admin</h2>
     <ul>
@@ -62,14 +62,13 @@
     <div class="dropdown-content">
       <a href="viewAgreementsIndex.htm">View Transfer Agreements</a>
       <a href="createAgreement.htm">Create Transfer Agreements</a>
+        <a href="removeAgreement.htm">Remove Transfer Agreements</a>
     </div>
   </li>
   
   </ul>
     </div><!-- End div id=DDNavBar -->
 
-    
- 
     
 	<div class="AddInstitutionContainer">
 		<div class="AddInstitutionHeader" style="background-color: #bfefff;
