--- a/selectedInstitution.htm
+++ b/selectedInstitution.htm
@@ -62,14 +62,12 @@
     <div class="dropdown-content">
       <a href="viewAgreementsIndex.htm">View Transfer Agreements</a>
       <a href="createAgreement.htm">Create Transfer Agreements</a>
+        <a href="removeAgreement.htm">Remove Transfer Agreements</a>
     </div>
   </li>
   
   </ul>
     </div><!-- End div id=DDNavBar -->
-
-
- 
     
 	<div class="viewInstitutionContainer">
 		<div class="viewInstitutionHeader">
