--- a/InstitutionAdmin/IA_editYourInstitutionUsers.htm
+++ b/InstitutionAdmin/IA_editYourInstitutionUsers.htm
@@ -67,7 +67,7 @@
     </div><!-- End div id=DDNavBar -->
     <div class="viewUserContainer">
 		<div class="viewUserHeader">
-			<h4>Add Institute User</h4>
+			<h4>Institution User Name goes here</h4>
 		</div>
 
 		<div class="addUserForm">
