--- a/addUsers.htm
+++ b/addUsers.htm
@@ -10,60 +10,60 @@
 <!-- Testing, Testing: 1,2,3 -->
 <div id="DDNavBar">
 <h2 align=center>Global Admin</h2>
-   <ul>
-       <li></li>
- <li><a href="index.htm">Home</a></li>
- 
- <li class="dropdown" style="float:right">
-   <a href="javascript:void(0)" class="dropbtn">Global Admin Profile</a>
-   <div class="dropdown-content">
-     <a href="#">View Profile</a>
-     <a href="#">Logout</a>
-   </div>
- </li>
- 
- <li class="dropdown">
-   <a href="javascript:void(0)" class="dropbtn">Users</a>
-   <div class="dropdown-content">
-     <a href="viewUsers.htm">View Users</a>
-     <a href="addUsers.htm">Add Users</a>
-   </div>
- </li>
- 
- <li class="dropdown">
-   <a href="javascript:void(0)" class="dropbtn">Institutions</a>
-   <div class="dropdown-content">
-     <a href="viewInstitutions.htm">View Institutions</a>
-     <a href="addInstitution.htm">Add Institutions</a>
-   </div>
- </li>
- 
- <li class="dropdown">
-   <a href="javascript:void(0)" class="dropbtn">Programs</a>
-   <div class="dropdown-content">
-     <a href="viewPrograms.htm">View Programs</a>
-     <a href="addPrograms.htm">Add Programs</a>
-   </div>
- </li>
+    <ul>
+        <li></li>
+  <li><a href="index.htm">Home</a></li>
+  
+  <li class="dropdown" style="float:right">
+    <a href="javascript:void(0)" class="dropbtn">Global Admin Profile</a>
+    <div class="dropdown-content">
+      <a href="#">View Profile</a>
+      <a href="#">Logout</a>
+    </div>
+  </li>
+  
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Users</a>
+    <div class="dropdown-content">
+      <a href="viewUsers.htm">View Users</a>
+      <a href="addUsers.htm">Add Users</a>
+    </div>
+  </li>
+  
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Institutions</a>
+    <div class="dropdown-content">
+      <a href="viewInstitutions.htm">View Institutions</a>
+      <a href="addInstitution.htm">Add Institutions</a>
+    </div>
+  </li>
+  
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Programs</a>
+    <div class="dropdown-content">
+      <a href="viewPrograms.htm">View Programs</a>
+      <a href="addPrograms.htm">Add Programs</a>
+    </div>
+  </li>
 
 <li class="dropdown">
-   <a href="javascript:void(0)" class="dropbtn">Courses</a>
-   <div class="dropdown-content">
-     <a href="viewCourse.htm">View Courses</a>
-     <a href="addCourse.htm">Add Courses</a>
-   </div>
- </li>
- 
- <li class="dropdown">
-   <a href="javascript:void(0)" class="dropbtn">Agreements</a>
-   <div class="dropdown-content">
-     <a href="#">View Agreements</a>
-     <a href="#">Add Agreements</a>
-   </div>
- </li>
- 
- </ul>
-   </div><!-- End div id=DDNavBar -->
+    <a href="javascript:void(0)" class="dropbtn">Courses</a>
+    <div class="dropdown-content">
+      <a href="viewCourse.htm">View Courses</a>
+      <a href="addCourse.htm">Add Courses</a>
+    </div>
+  </li>
+  
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Agreements</a>
+    <div class="dropdown-content">
+      <a href="viewAgreementsIndex.htm">View Transfer Agreements</a>
+      <a href="createAgreement.htm">Create Transfer Agreements</a>
+    </div>
+  </li>
+  
+  </ul>
+    </div><!-- End div id=DDNavBar -->
 <!-- End of new nav bar html code -->
 
 
