--- a/addPrograms.htm
+++ b/addPrograms.htm
@@ -61,6 +61,7 @@
     <div class="dropdown-content">
       <a href="viewAgreementsIndex.htm">View Transfer Agreements</a>
       <a href="createAgreement.htm">Create Transfer Agreements</a>
+        <a href="removeAgreement.htm">Remove Transfer Agreements</a>
     </div>
   </li>
   
