Made css for all global pages
Move old css to the OldCss folder

--- a/viewPrograms.htm
+++ b/viewPrograms.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="viewPrograms.css">
+<link rel="stylesheet" href="viewProgramsStyle.css">
 <title>View Programs</title>
 </head>
 <body>
