double targered css
All Global Admin pages
IA_viewUsers
IA_viewPrograms
IA_selectedProgram
IA_InstitutionProfile
IA_viewAgreementIndex
IA_viewAgreementsbyPrograms
IA_viewAgreementsbyCourses

--- a/InstitutionAdmin/IA_InstituteProfile.htm
+++ b/InstitutionAdmin/IA_InstituteProfile.htm
@@ -72,8 +72,8 @@
   </ul>
     </div><!-- End div id=DDNavBar -->
     
-	<div class="addCourseContainer" align=center>
-		<div class="addCourseHeader">
+	<div class="institutionProfileContainer" align=center>
+		<div class="InstitutionProfileHeader">
 			<h4>Institute Profile</h4>
 		</div>
 
@@ -167,7 +167,7 @@
             <h3 align="center">Programs</h3>
             
                     <div class="selectInstitutediv">
-                            <select multiple style="width: 420px; height: 200px;">
+                            <select multiple style="width: 420px; height: 200px; padding: 5px;">
                                 <option disabled>Select Program</option>
                                 <option></option>
                                 <option></option>
@@ -175,41 +175,42 @@
                             <input type="button" value="Select Program">
                      </div>
                      <div class="divProgramInfo">
+                         <br>
                          <table>
                             <tr>
                                 <td>Program ID:</td>    
                                 <td> 
-                                    <input type="text" placeholder="Program ID">
+                                    <input type="text" placeholder="Program ID" class="commonTxtBox">
                                 </td>
                              </tr>
                              <tr>
                                 <td> CAE Designation:</td>
                                 <td>
-                                    <input type="text" placeholder="CAE Designation">
+                                    <input type="text" placeholder="CAE Designation" class="commonTxtBox">
                                 </td>
                             </tr>
                             <tr>
                                 <td>Program Title:</td>
                                 <td>
-                                    <input type="text" placeholder="Program Title">
+                                    <input type="text" placeholder="Program Title" class="commonTxtBox">
                                 </td>
                              </tr>
                              <tr>
                                 <td>Credit Hours:</td>
                                 <td>
-                                    <input type="text" placeholder="Credit Hours">
+                                    <input type="text" placeholder="Credit Hours" class="commonTxtBox">
                                 </td>
                             </tr>
                             <tr>
                                 <td>Program Type:</td>    
                                 <td>
-                                    <input type="text" placeholder="Program Type">
+                                    <input type="text" placeholder="Program Type" class="commonTxtBox">
                                 </td>
                              </tr>
                              <tr>
                                 <td>Curriculam Code:</td>
                                 <td>
-                                    <input type="text" placeholder="Curriculam Code:">
+                                    <input type="text" placeholder="Curriculam Code:" class="commonTxtBox">
                                 </td>
                             </tr>
                             <tr>
