--- a/InstitutionAdmin/IA_editYourInstitutionUsers.htm
+++ b/InstitutionAdmin/IA_editYourInstitutionUsers.htm
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="IA_addInstitutionUsers.css">
-<title>Add Institute Users</title>
+<link rel="stylesheet" href="IA_editYourInstitutionUsers.css">
+<title>Edit Institute Users</title>
 </head>
 <body>
 <div class="container">
@@ -65,7 +65,7 @@
   
   </ul>
     </div><!-- End div id=DDNavBar -->
-    <div class="viewUserContainer">
+    <div class="IA_editYourInstitutionUserContainer">
 		<div class="viewUserHeader">
 			<h4>Institution User Name goes here</h4>
 		</div>
