--- a/InstitutionAdmin/IA_selectedPrograms.htm
+++ b/InstitutionAdmin/IA_selectedPrograms.htm
@@ -69,8 +69,8 @@
   </ul>
     </div><!-- End div id=DDNavBar -->
     
-<div class="selectProgramContainer_ViewProgram">
-		<div class="viewUserHeader">
+<div class="IA_selectProgramContainer">
+		<div class="selecteProgramHeader">
 			<h4>Selected Programs Name goes here</h4>
 		</div>
 
