--- a/InstitutionAdmin/IA_viewAgreementsIndex.htm
+++ b/InstitutionAdmin/IA_viewAgreementsIndex.htm
@@ -73,7 +73,7 @@
     </div><!-- End div id=DDNavBar -->
   
 
-	<div class="viewAgreementContainer" align=center>
+	<div class="IA_viewAgreementIndexContainer" align=center>
 		<div class="viewAgreementHeader">
 			<h4>View Transfer Agreement</h4>
 		</div>
