--- a/InstitutionAdmin/IA_viewPrograms.htm
+++ b/InstitutionAdmin/IA_viewPrograms.htm
@@ -68,7 +68,7 @@
     </div><!-- End div id=DDNavBar -->
     
 
-	<div class="viewUserContainer">
+	<div class="viewProgramsContainer">
 		<div class="viewProgramHeader">
 			<h4>View Programs</h4>
 		</div>
@@ -107,7 +107,7 @@
                 </fieldset>
                 <fieldset>
                     <legend>Location</legend>
-				<p id="adminTypeLabel"> Filter By State </p>
+				<p id="adminTypeLabel"> Filter By State: </p>
 				<select class="commonCmbBoxCSS">
 					<option></option><option></option><option></option>
 				</select><br>
@@ -128,7 +128,7 @@
                 </fieldset>
                 <fieldset>
                     <legend>CAE Designations</legend>
-				<p id="adminTypeLabel"> CAE Designation: </p>
+				<p id="adminTypeLabel" style="text-align: center"> CAE Designation: </p>
 				<select class="commonCmbBoxCSS">
 					<option></option><option></option><option></option>
 				</select>
