--- a/InstitutionAdmin/IA_viewUsers.htm
+++ b/InstitutionAdmin/IA_viewUsers.htm
@@ -68,7 +68,7 @@
     </div><!-- End div id=DDNavBar -->
     
 
-    <div class="viewUserContainer">
+    <div class="IA_viewUserContainer">
 		<div class="viewUserHeader">
 			<h4>View User</h4>
 		</div>
