--- a/addPrograms.htm
+++ b/addPrograms.htm
@@ -69,12 +69,12 @@
     </div><!-- End div id=DDNavBar -->
 <!-- End of new nav bar html code -->
 
-<div class="selectProgramContainer_ViewProgram">
-		<div class="viewUserHeader">
+<div class="addProgramContainer">
+		<div class="addProgramHeader">
 			<h4>Add Program</h4>
 		</div>
 
-		<div class="programInfoInSelectProgram">
+		<div class="programInfoInAddProgram">
 			<table align="center">
                 <tr>
                 <h4 class="programInformationHeader">Program Information</h4><br>
