--- a/viewPrograms_selectProgram.htm
+++ b/viewPrograms_selectProgram.htm
@@ -72,8 +72,8 @@
 <!-- End of new nav bar html code -->
 
 
-	<div class="selectProgramContainer_ViewProgram">
-		<div class="viewUserHeader">
+	<div class="selectedProgramContainer">
+		<div class="selectedProgramHeader">
 			<h4>Program Name (Program ID)</h4>
 		</div>
 
