--- a/viewUsers_selectUser.htm
+++ b/viewUsers_selectUser.htm
@@ -67,9 +67,9 @@
     </div><!-- End div id=DDNavBar -->
 <!-- End of new nav bar html code -->
 
-<div class="viewUserContainer">
-		<div class="viewUserHeader">
-			<h4>User Name (UserID)</h4>
+<div class="selectedUserContainer">
+		<div class="selectedUserHeader">
+			<h4>Selected User Name goes here </h4>
 		</div>
 
 		<div class="selectUserForm">
