--- a/viewPrograms.htm
+++ b/viewPrograms.htm
@@ -68,7 +68,7 @@
 <!-- End of new nav bar html code -->
 
 
-	<div class="viewUserContainer">
+	<div class="viewProgramContainer">
 		<div class="viewProgramHeader">
 			<h4>View Programs</h4>
 		</div>
@@ -107,7 +107,7 @@
                 </fieldset>
                 <fieldset>
                     <legend>Location</legend>
-				<p id="adminTypeLabel"> Filter By State </p>
+				<p id="adminTypeLabel"> Filter By State: </p>
 				<select class="commonCmbBoxCSS">
 					<option></option><option></option><option></option>
 				</select><br>
