Finished Institute, Course and Agreements CSS

--- a/viewAgreementsByCourses.htm
+++ b/viewAgreementsByCourses.htm
@@ -67,7 +67,7 @@
          <!-- End div id=DDNavBar -->
           
           
-         <div class="viewAgreementContainer" align=center>
+         <div class="vbc_Container" align=center>
             <div class="TitleHeader">
                <h4>View Transfer Agreement</h4>
             </div> <!-- End div class="viewAgreementHeader" -->
