--- a/viewAgreementsByPrograms.htm
+++ b/viewAgreementsByPrograms.htm
@@ -72,7 +72,7 @@
     </div><!-- End div id=DDNavBar -->
 
 
-	<div class="viewAgreementContainer" align=center>
+	<div class="vbp_Container" align=center>
 		<div class="TitleHeader">
 			<h4>View Transfer Agreement</h4>
 		</div><!-- end div class="viewAgreementHeader -->
