added CSS to Joint CSS
selected user
view user
add user
selected program
add program
view program

--- a/InstitutionAdmin/IA_editProgramsInYourInstitute.htm
+++ b/InstitutionAdmin/IA_editProgramsInYourInstitute.htm
@@ -69,12 +69,12 @@
   </ul>
     </div><!-- End div id=DDNavBar -->
     
-<div class="selectProgramContainer_ViewProgram">
-		<div class="viewUserHeader">
+<div class="IA_editProgramInYourInstituteContainer">
+		<div class="TitleHeader">
 			<h4>Edit Program In Your Institute</h4>
 		</div>
 
-		<div class="programInfoInSelectProgram">
+		<div class="programInfomation">
 			<table align="center">
                 <tr>
                 <h4 class="programInformationHeader">Program Information</h4><br>
