--- a/addUsers.htm
+++ b/addUsers.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="addUsers.css">
+<link rel="stylesheet" href="jointStyle.css">
 <title>Add Users</title>
 </head>
 <body>
@@ -69,7 +69,7 @@
 
 
     <div class="addUserContainer">
-		<div class="addUserHeader">
+		<div class="TitleHeader">
 			<h4>Add User</h4>
 		</div> <!--End of Add User Header-->
 
