--- a/viewPrograms.htm
+++ b/viewPrograms.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="viewProgramsStyle.css">
+<link rel="stylesheet" href="jointStyle.css">
 <title>View Programs</title>
 </head>
 <body>
@@ -69,7 +69,7 @@
 
 
 	<div class="viewProgramContainer">
-		<div class="viewProgramHeader">
+		<div class="TitleHeader">
 			<h4>View Programs</h4>
 		</div>
 
