--- a/viewUsers.htm
+++ b/viewUsers.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="viewUsers.css">
+<link rel="stylesheet" href="jointStyle.css">
 <title>View Users</title>
 </head>
 <body>
@@ -67,7 +67,7 @@
     </div><!-- End div id=DDNavBar -->
 <!-- End of new nav bar html code -->
     <div class="viewUserContainer">
-		<div class="viewUserHeader">
+		<div class="TitleHeader">
 			<h4>View User</h4>
 		</div>
             
