--- a/viewUsers_selectUser.htm
+++ b/viewUsers_selectUser.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="viewUsers_selectUser.css">
+<link rel="stylesheet" href="jointStyle.css">
 <title>User Name</title>
 </head>
 <body>
@@ -68,7 +68,7 @@
 <!-- End of new nav bar html code -->
 
 <div class="selectedUserContainer">
-		<div class="selectedUserHeader">
+		<div class="TitleHeader">
 			<h4>Selected User Name goes here </h4>
 		</div>
 
@@ -119,7 +119,7 @@
 				</div>
 		<!--end of div institute-->
 		</div>
-		<div id="saveOrCancelButtons">
+		<div align="center" id="saveOrCancelButtons">
 			<form action="" id="saveChangesToUserName" >
 				<input type="submit" value="Save Changes" class="btnSaveChanges">
 			</form>
