Combined CSS for Institution Admins
Institution Admins:
view user
view programs
view agreements index
view aggrements courses
selected program
institution profile
edit your institution user
edit programs in your institution
add institution user

--- a/InstitutionAdmin/IA_Index.htm
+++ b/InstitutionAdmin/IA_Index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
  <html> 
  <head> 
- <link rel="stylesheet" href="IA_IndexStyle.css">
+ <link rel="stylesheet" href="IA_Jointstyle.css">
 <title>CSSIA Database</title> 
 </head>
 <body> 
