--- a/InstitutionAdmin/IA_addInstitutionUsers.htm
+++ b/InstitutionAdmin/IA_addInstitutionUsers.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="IA_addInstitutionUsers.css">
+<link rel="stylesheet" href="IA_Jointstyle.css">
 <title>Add Institute Users</title>
 </head>
 <body>
@@ -65,8 +65,8 @@
   
   </ul>
     </div><!-- End div id=DDNavBar -->
-    <div class="viewUserContainer">
-		<div class="viewUserHeader">
+    <div class="IA_addInstitutionUserContainer">
+		<div class="TitleHeader">
 			<h4>Add Institute User</h4>
 		</div>
 
