--- a/InstitutionAdmin/IA_editInstitutionUser.htm
+++ b/InstitutionAdmin/IA_editInstitutionUser.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="IA_editnIstitutionUser.css">
+<link rel="stylesheet" href="IA_Jointstyle.css">
 <title>Edit Institute Users</title>
 </head>
 <body>
@@ -68,7 +68,7 @@
     </div><!-- End div id=DDNavBar -->
     
     <div class="viewUserContainer">
-		<div class="viewUserHeader">
+		<div class="TitleHeader">
 			<h4>Institute User Name goes here</h4>
 		</div>
 
