--- a/InstitutionAdmin/IA_editYourInstitutionUsers.htm
+++ b/InstitutionAdmin/IA_editYourInstitutionUsers.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="IA_editYourInstitutionUsers.css">
+<link rel="stylesheet" href="IA_Jointstyle.css">
 <title>Edit Institute Users</title>
 </head>
 <body>
@@ -66,7 +66,7 @@
   </ul>
     </div><!-- End div id=DDNavBar -->
     <div class="IA_editYourInstitutionUserContainer">
-		<div class="viewUserHeader">
+		<div class="TitleHeader">
 			<h4>Institution User Name goes here</h4>
 		</div>
 
