--- a/InstitutionAdmin/IA_InstituteProfile.htm
+++ b/InstitutionAdmin/IA_InstituteProfile.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="IA_InstituteProfile.css"
+<link rel="stylesheet" href="IA_Jointstyle.css"
       .>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
@@ -73,7 +73,7 @@
     </div><!-- End div id=DDNavBar -->
     
 	<div class="institutionProfileContainer" align=center>
-		<div class="InstitutionProfileHeader">
+		<div class="TitleHeader">
 			<h4>Institute Profile</h4>
 		</div>
 
