--- a/InstitutionAdmin/IA_editProgramsInYourInstitute.htm
+++ b/InstitutionAdmin/IA_editProgramsInYourInstitute.htm
@@ -3,7 +3,7 @@
 <head>
    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-<link rel="stylesheet" href="IA_editProgramsInYourInstitute.css">
+<link rel="stylesheet" href="IA_Jointstyle.css">
 <title>Edit Program Program In Your Institute</title>
 </head>
 <body>
