--- a/InstitutionAdmin/IA_selectedPrograms.htm
+++ b/InstitutionAdmin/IA_selectedPrograms.htm
@@ -3,7 +3,7 @@
 <head>
    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-<link rel="stylesheet" href="IA_selectedPrograms.css">
+<link rel="stylesheet" href="IA_Jointstyle.css">
 <title>Selected Program</title>
 </head>
 <body>
@@ -70,7 +70,7 @@
     </div><!-- End div id=DDNavBar -->
     
 <div class="IA_selectProgramContainer">
-		<div class="selecteProgramHeader">
+		<div class="TitleHeader">
 			<h4>Selected Programs Name goes here</h4>
 		</div>
 
