--- a/InstitutionAdmin/IA_viewAgreementsByCourses.htm
+++ b/InstitutionAdmin/IA_viewAgreementsByCourses.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="IA_viewAgreementsByCourses.css">
+<link rel="stylesheet" href="IA_Jointstyle.css">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 <script type="text/javascript" src="script.js"></script>
@@ -74,7 +74,7 @@
   
 
 	<div class="viewAgreementContainer" align=center>
-		<div class="viewAgreementHeader">
+		<div class="TitleHeader">
 			<h4>View Transfer Agreement</h4>
 		</div>
 
