--- a/InstitutionAdmin/IA_viewAgreementsIndex.htm
+++ b/InstitutionAdmin/IA_viewAgreementsIndex.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="IA_viewAgreementsIndex.css">
+<link rel="stylesheet" href="IA_Jointstyle.css">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 <script type="text/javascript" src="script.js"></script>
