--- a/InstitutionAdmin/IA_viewPrograms.htm
+++ b/InstitutionAdmin/IA_viewPrograms.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="IA_viewPrograms.css">
+<link rel="stylesheet" href="IA_Jointstyle.css">
 <title>View Programs</title>
 </head>
 <body>
@@ -69,7 +69,7 @@
     
 
 	<div class="viewProgramsContainer">
-		<div class="viewProgramHeader">
+		<div class="TitleHeader">
 			<h4>View Programs</h4>
 		</div>
 
