--- a/InstitutionAdmin/IA_viewUsers.htm
+++ b/InstitutionAdmin/IA_viewUsers.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="IA_viewUsers.css">
+<link rel="stylesheet" href="IA_Jointstyle.css">
 <title>View Users</title>
 </head>
 <body>
@@ -69,7 +69,7 @@
     
 
     <div class="IA_viewUserContainer">
-		<div class="viewUserHeader">
+		<div class="TitleHeader">
 			<h4>View User</h4>
 		</div>
 
