Started Code Review and CSS merge for IA

--- a/InstitutionAdmin/IA_viewAgreementsByPrograms.htm
+++ b/InstitutionAdmin/IA_viewAgreementsByPrograms.htm
@@ -74,7 +74,7 @@
   
 
 	<div class="viewAgreementContainer" align=center>
-		<div class="viewAgreementHeader">
+		<div class="TitleHeader">
 			<h4>View Transfer Agreement</h4>
 		</div>
 
