--- a/InstitutionAdmin/IA_viewAgreementsIndex.htm
+++ b/InstitutionAdmin/IA_viewAgreementsIndex.htm
@@ -74,7 +74,7 @@
   
 
 	<div class="IA_viewAgreementIndexContainer" align=center>
-		<div class="viewAgreementHeader">
+		<div class="TitleHeader">
 			<h4>View Transfer Agreement</h4>
 		</div>
 
