--- a/InstitutionAdmin/IA_Index.htm
+++ b/InstitutionAdmin/IA_Index.htm
@@ -27,7 +27,7 @@
     <a href="javascript:void(0)" class="dropbtn">Users</a>
     <div class="dropdown-content">
       <a href="IA_viewUsers.htm">View All Users</a>
-      <a href="IA_editYourInstitutionUsers.htm">Edit Your Institution User</a>
+      <a href="IA_editInstitutionUser.htm">View and Edit Institution User</a>
       <a href="IA_addInstitutionUsers.htm">Add Institution Users</a>
     </div>
   </li>
@@ -66,6 +66,7 @@
   
   </ul>
     </div><!-- End div id=DDNavBar -->
+    
     
     <div id="About">
         <h4>About this tool:</h4>
