--- a/InstitutionAdmin/IA_viewUsers.htm
+++ b/InstitutionAdmin/IA_viewUsers.htm
@@ -3,13 +3,11 @@
 <head>
 <link rel="stylesheet" href="IA_Jointstyle.css">
 <title>View Users</title>
+<link rel="icon" type="image/png" href="Images/cae_logo-transparent-stroke.png" />
 </head>
-<body>
-<div class="container">
-<!-- Beginning of the new navigation bar html code -->
-<!-- Testing, Testing: 1,2,3 -->
-<div id="DDNavBar">
-<h2 align=center>Institution Admin</h2>
+<header>
+    <div id="DDNavBar">
+<h2 align="center" style="margin: 0px"><img src="Images/CRRC%20Logo_Color-01.png"  class="CRRClogo"></h2>
     <ul>
         <li></li>
   <li><a href="IA_Index.htm">Home</a></li>
@@ -66,8 +64,11 @@
   
   </ul>
     </div><!-- End div id=DDNavBar -->
-    
-
+</header>
+<body>
+<div class="container">
+<!-- Beginning of the new navigation bar html code -->
+<!-- Testing, Testing: 1,2,3 -->
     <div class="IA_viewUserContainer">
 		<div class="TitleHeader">
 			<h4>View User</h4>
@@ -125,4 +126,11 @@
 		<!--End of div Container-->
 </div>
 </body>
+<footer>
+   <h2 align="center" style="margin: 0px"> <img src="Images/cae_logo-transparent-stroke.png" style="width: 180px;height: 180px">    
+        <img src="Images/MVCC-logo.png" style="height: 180px;">
+        <img src="Images/DHSlogo.jpg" style="width: 180px;height: 180px">
+        <img src="Images/NSFlogo.jpg" style="">
+   </h2>
+</footer>
 </html>
